--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta property="og:title" content="وظائف عسكرية – حكومية | إنجاز معاملاتك باحترافية">
     <meta property="og:description" content="نقدم لك حلولاً سريعة وموثوقة لإنجاز كافة معاملاتك العسكرية والحكومية في المملكة.">
-    <meta property="og:image" content="https://abuzaiddesignerix-maker.github.io/00/banner.png">
+    <meta property="og:image" content="https://aass52.github.io/00/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://abuzaiddesignerix-maker.github.io/00/">
@@ -570,4 +570,5 @@
     
 </body>
 </html>
+
 
