--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta property="og:title" content="وظائف عسكرية – حكومية | إنجاز معاملاتك باحترافية">
     <meta property="og:description" content="نقدم لك حلولاً سريعة وموثوقة لإنجاز كافة معاملاتك العسكرية والحكومية في المملكة.">
-    <meta property="og:image" content="https://abuzaiddesignerix-maker.github.io/00/banner.png">
+    <meta property="og:image" content=" https://hg5g.github.io/00/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://abuzaiddesignerix-maker.github.io/00/">
+    <meta property="og:url" content=" https://hg5g.github.io/00/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="وظائف عسكرية – حكومية">
 
@@ -569,3 +569,4 @@
     
 </body>
 </html>
+
